using modules for certain movie data

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -120,48 +120,63 @@
     <div class="container">
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="KYz2wyBy3kc" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg" width="220" height="342">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/1/13/Toy_Story.jpg/220px-Toy_Story.jpg" width="220" height="342">
     <h2>Toy Story</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="uJfLoE6hanc" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/6/63/Birdman_poster.png" width="220" height="342">
-    <h2>Birdman</h2>
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/63/Birdman_poster.png/220px-Birdman_poster.png" width="220" height="342">
+    <h2>Birdman or (The Unexpected Virtue of Ignorance)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="1Fg5iWmQjwk" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/a6/The_Grand_Budapest_Hotel_Poster.jpg" width="220" height="342">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/a/a6/The_Grand_Budapest_Hotel_Poster.jpg/220px-The_Grand_Budapest_Hotel_Poster.jpg" width="220" height="342">
     <h2>The Grand Budapest Hotel</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="8IBNZ6O2kMk" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/6/63/Monsters_Inc.JPG" width="220" height="342">
-    <h2>Monsters Inc.</h2>
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/63/Monsters_Inc.JPG/220px-Monsters_Inc.JPG" width="220" height="342">
+    <h2>Monsters, Inc.</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="87q0RD5R4Us" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/5/50/RatatouillePoster.jpg" width="220" height="342">
-    <h2>Ratatouille</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="2zLkasScy7A" data-toggle="modal" data-target="#trailer">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/2/29/Finding_Nemo.jpg/220px-Finding_Nemo.jpg" width="220" height="342">
+    <h2>Finding Nemo</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="2PpgPxjzbkA" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Moulin_rouge_poster.jpg" width="220" height="342">
-    <h2>Moulin Rouge</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="87E6N7ToCxs" data-toggle="modal" data-target="#trailer">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/1/15/Wreckitralphposter.jpeg/220px-Wreckitralphposter.jpeg" width="220" height="342">
+    <h2>Wreck-It Ralph</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="rXUFUp6vsxg" data-toggle="modal" data-target="#trailer">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/f/f6/Beginners_Poster.jpg/220px-Beginners_Poster.jpg" width="220" height="342">
+    <h2>Beginners</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="C3VjVMitTbA" data-toggle="modal" data-target="#trailer">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/8/8b/Django_Unchained_Poster.jpg/220px-Django_Unchained_Poster.jpg" width="220" height="342">
+    <h2>Django Unchained</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="s7EdQ4FqbhY" data-toggle="modal" data-target="#trailer">
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/3/3b/Pulp_Fiction_%281994%29_poster.jpg/220px-Pulp_Fiction_%281994%29_poster.jpg" width="220" height="342">
+    <h2>Pulp Fiction</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="V75dMMIW2B4" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/9/9d/The_Lord_of_the_Rings_The_Fellowship_of_the_Ring_%282001%29_theatrical_poster.jpg" width="220" height="342">
-    <h2>The Lord of the Rings:<br>The Fellowship of the Ring</h2>
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/9/9d/The_Lord_of_the_Rings_The_Fellowship_of_the_Ring_%282001%29_theatrical_poster.jpg/220px-The_Lord_of_the_Rings_The_Fellowship_of_the_Ring_%282001%29_theatrical_poster.jpg" width="220" height="342">
+    <h2>The Lord of the Rings: The Fellowship of the Ring</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="LbfMDwc4azU" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/9/9d/The_Lord_of_the_Rings_The_Fellowship_of_the_Ring_%282001%29_theatrical_poster.jpg" width="220" height="342">
-    <h2>The Lord of the Rings:<br> The Two Towers</h2>
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/a/ad/Lord_of_the_Rings_-_The_Two_Towers.jpg/220px-Lord_of_the_Rings_-_The_Two_Towers.jpg" width="220" height="342">
+    <h2>The Lord of the Rings: The Two Towers</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="r5X-hFf6Bwo" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/9/9d/Lord_of_the_Rings_-_The_Return_of_the_King.jpg" width="220" height="342">
-    <h2>The Lord of the Rings:<br>The Return of the King</h2>
+    <img src="http://upload.wikimedia.org/wikipedia/en/thumb/9/9d/Lord_of_the_Rings_-_The_Return_of_the_King.jpg/220px-Lord_of_the_Rings_-_The_Return_of_the_King.jpg" width="220" height="342">
+    <h2>The Lord of the Rings: The Return of the King</h2>
 </div>
 
     </div>
