--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -64,7 +64,7 @@
             overflow: scroll !important;
         }
         .movie-data{
-            color:gray;
+            color: #228b22;
         }
 
     </style>
@@ -73,14 +73,12 @@
         $(document).on('click', '.hanging-close, .modal-backdrop, .modal', function (event) {
             // Remove the src so the player itself gets removed, as this is the only
             // reliable way to ensure the video stops playing in IE
-            console.log("first click")
             $("#trailer-video-container").empty();
         });
         // Start playing the video whenever the trailer modal is opened
         $(document).on('click', '.movie-tile', function (event) {
             var trailerYouTubeId = $(this).attr('data-trailer-youtube-id')
             var sourceUrl = 'http://www.youtube.com/embed/' + trailerYouTubeId + '?autoplay=1&html5=1';
-            console.log("secod click")
             $("#trailer-video-container").empty().append($("<iframe></iframe>", {
               'id': 'trailer-video',
               'type': 'text-html',
